fizzy beverages 2 bottles add

--- a/about.html
+++ b/about.html
@@ -207,7 +207,7 @@
                     <ul class="footer-contact">
                         <li><i class="bi bi-telephone-fill"></i> +91 77868 82288</li>
                         <li><i class="bi bi-telephone-fill"></i> +91 85911 82288</li>
-                        <li><i class="bi bi-envelope-fill"></i> iinfo@fizzybeverages.in</li>
+                        <li><i class="bi bi-envelope-fill"></i> info@fizzybeverages.in</li>
                         <li><i class="bi bi-geo-alt-fill"></i> Shop No. 14/A, Ground Floor, MM Complex,<br>
                             Mumbra Shil Road, Shilphata Shil,<br>
                             Mumbra - Thane, Maharashtra - 400612</li>
