--- a/index.html
+++ b/index.html
@@ -245,6 +245,28 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image lambda-product">
+                            <img src="images/products/fizzy-lambda.png" alt="Fizzy Lambda" class="product-img" onerror="this.style.display='none';">
+                        </div>
+                        <div class="product-info">
+                            <h4>Fizzy Lambda</h4>
+                            <p>Refreshing lambda flavor</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image jayaka-product">
+                            <img src="images/products/fizzy-jayaka.png" alt="Fizzy Jayaka" class="product-img" onerror="this.style.display='none';">
+                        </div>
+                        <div class="product-info">
+                            <h4>Fizzy Jayaka</h4>
+                            <p>Refreshing jayaka flavor</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -288,7 +310,7 @@
                     <ul class="footer-contact">
                         <li><i class="bi bi-telephone-fill"></i> +91 77868 82288</li>
                         <li><i class="bi bi-telephone-fill"></i> +91 85911 82288</li>
-                        <li><i class="bi bi-envelope-fill"></i> iinfo@fizzybeverages.in</li>
+                        <li><i class="bi bi-envelope-fill"></i> info@fizzybeverages.in</li>
                         <li><i class="bi bi-geo-alt-fill"></i> Shop No. 14/A, Ground Floor, MM Complex,<br>
                             Mumbra Shil Road, Shilphata Shil,<br>
                             Mumbra - Thane, Maharashtra - 400612</li>
