--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
                             </div>
                             <div class="contact-details">
                                 <h5>Email</h5>
-                                <p><a href="mailto:iinfo@fizzybeverages.in">iinfo@fizzybeverages.in</a></p>
+                                <p><a href="mailto:info@fizzybeverages.in">info@fizzybeverages.in</a></p>
                             </div>
                         </div>
 
@@ -245,7 +245,7 @@
                     <ul class="footer-contact">
                         <li><i class="bi bi-telephone-fill"></i> +91 77868 82288</li>
                         <li><i class="bi bi-telephone-fill"></i> +91 85911 82288</li>
-                        <li><i class="bi bi-envelope-fill"></i> iinfo@fizzybeverages.in</li>
+                        <li><i class="bi bi-envelope-fill"></i> info@fizzybeverages.in</li>
                         <li><i class="bi bi-geo-alt-fill"></i> Shop No. 14/A, Ground Floor, MM Complex,<br>
                             Mumbra Shil Road, Shilphata Shil,<br>
                             Mumbra - Thane, Maharashtra - 400612</li>
