--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
     <title>Contact Us - Fizzy Beverages</title>
     <meta name="description" content="Get in touch with Fizzy Beverages. Visit our store or contact us for orders and inquiries.">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/hero/logo.png">
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -22,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">
-                <span class="brand-text">FIZZY</span> <span class="brand-accent">BEVERAGES</span>
+                <img src="images/hero/logo.png" alt="Fizzy Beverages Logo" class="navbar-logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -224,6 +227,10 @@
                 <div class="col-lg-4">
                     <h5 class="footer-brand">FIZZY BEVERAGES</h5>
                     <p>Premium quality beverages with natural ingredients. Refreshing your moments, one sip at a time.</p>
+                    <div class="made-in-india-badge">
+                        <span class="india-flag">🇮🇳</span>
+                        <span>Made in India</span>
+                    </div>
                     <div class="social-links">
                         <a href="#"><i class="bi bi-instagram"></i></a>
                         <a href="https://wa.me/917786882288" target="_blank"><i class="bi bi-whatsapp"></i></a>
