--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Fizzy Beverages - Refreshing Drinks, Natural Goodness</title>
     <meta name="description" content="Fizzy Beverages - Premium quality beverages specializing in Amla. Fresh, natural, and refreshing drinks for every occasion.">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/hero/logo.png">
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -22,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">
-                <span class="brand-text">FIZZY</span> <span class="brand-accent">BEVERAGES</span>
+                <img src="images/hero/logo.png" alt="Fizzy Beverages Logo" class="navbar-logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -90,6 +93,10 @@
                                 <i class="bi bi-heart-fill"></i>
                                 <span>Health Benefits</span>
                             </div>
+                            <div class="feature-tag made-in-india-hero">
+                                <span class="india-flag">🇮🇳</span>
+                                <span>Made in India</span>
+                            </div>
                         </div>
                         <div class="hero-buttons animate-fade-in-delay-2">
                             <a href="#products" class="btn btn-primary btn-lg me-3">
@@ -139,7 +146,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="speciality-image">
-                        <img src="images/hero/Fizzy-amla.jpg" alt="Amla Zeera Soda - Our Speciality" class="amla-featured-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <img src="images/hero/fizzy-amla.png" alt="Amla Zeera Soda - Our Speciality" class="amla-featured-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                         <div class="amla-bottle" style="display:none;">
                             <div class="bottle-glow"></div>
                         </div>
@@ -179,7 +186,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image amla-product">
-                            <img src="images/products/fizzy-amla.png" alt="Fizzy Amla Zeera Soda" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/amla.jpeg" alt="Fizzy Amla Zeera Soda" class="product-img" onerror="this.style.display='none';">
                             <div class="product-badge">Speciality</div>
                         </div>
                         <div class="product-info">
@@ -191,7 +198,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image jeera-product">
-                            <img src="images/products/fizzy-jeera.png" alt="Fizzy Jeera" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/jeera.png" alt="Fizzy Jeera" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Jeera</h4>
@@ -202,7 +209,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image orange-product">
-                            <img src="images/products/fizzy-orange.png" alt="Fizzy Orange" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/orange.png" alt="Fizzy Orange" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Orange</h4>
@@ -213,7 +220,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image cola-product">
-                            <img src="images/products/fizzy-supercola.png" alt="Fizzy Super Cola" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/supercola.png" alt="Fizzy Super Cola" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Super Cola</h4>
@@ -225,7 +232,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image watermelon-product">
-                            <img src="images/products/fizzy-watermelon.png" alt="Fizzy Watermelon" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/watermelon.png" alt="Fizzy Watermelon" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Watermelon</h4>
@@ -237,7 +244,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image mineral-product">
-                            <img src="images/products/fizzy-mineralwater.png" alt="Fizzy Mineral Water" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/mineral-water.png" alt="Fizzy Mineral Water" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Mineral Water</h4>
@@ -248,7 +255,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image lambda-product">
-                            <img src="images/products/fizzy-lambda.png" alt="Fizzy Lambda" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/lime.jpeg" alt="Fizzy Lambda" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Lambda</h4>
@@ -259,7 +266,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image jayaka-product">
-                            <img src="images/products/fizzy-jayaka.png" alt="Fizzy Jayaka" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/jayaka.png" alt="Fizzy Jayaka" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Jayaka</h4>
@@ -289,6 +296,10 @@
                 <div class="col-lg-4">
                     <h5 class="footer-brand">FIZZY BEVERAGES</h5>
                     <p>Premium quality beverages with natural ingredients. Refreshing your moments, one sip at a time.</p>
+                    <div class="made-in-india-badge">
+                        <span class="india-flag">🇮🇳</span>
+                        <span>Made in India</span>
+                    </div>
                     <div class="social-links">
                         <a href="#"><i class="bi bi-instagram"></i></a>
                         <a href="https://wa.me/917786882288" target="_blank"><i class="bi bi-whatsapp"></i></a>
