--- a/about.html
+++ b/about.html
@@ -190,8 +190,7 @@
                     <h5 class="footer-brand">FIZZY BEVERAGES</h5>
                     <p>Premium quality beverages with natural ingredients. Refreshing your moments, one sip at a time.</p>
                     <div class="made-in-india-badge">
-                        <span class="india-flag">🇮🇳</span>
-                        <span>Made in India</span>
+                        <img src="images/hero/makeinindia.png" alt="Make in India" class="make-in-india-logo">
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="bi bi-instagram"></i></a>
