--- a/index.html
+++ b/index.html
@@ -93,10 +93,6 @@
                                 <i class="bi bi-heart-fill"></i>
                                 <span>Health Benefits</span>
                             </div>
-                            <div class="feature-tag made-in-india-hero">
-                                <span class="india-flag">🇮🇳</span>
-                                <span>Made in India</span>
-                            </div>
                         </div>
                         <div class="hero-buttons animate-fade-in-delay-2">
                             <a href="#products" class="btn btn-primary btn-lg me-3">
@@ -186,7 +182,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image amla-product">
-                            <img src="images/products/amla.jpeg" alt="Fizzy Amla Zeera Soda" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/amla-3.png" alt="Fizzy Amla Zeera Soda" class="product-img" onerror="this.style.display='none';">
                             <div class="product-badge">Speciality</div>
                         </div>
                         <div class="product-info">
@@ -195,10 +191,35 @@
                         </div>
                     </div>
                 </div>
+                <!-- 2. Punjab Jayaka Zeera Soda -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image jayaka-product">
+                            <img src="images/products/punjabi2.png" alt="Fizzy Jayaka" class="product-img" onerror="this.style.display='none';">
+                        </div>
+                        <div class="product-info">
+                            <h4>Fizzy Jayaka</h4>
+                            <p>Refreshing jayaka flavor</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3. Lime Soda -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image lambda-product">
+                            <img src="images/products/limefizzy.png" alt="Fizzy Lambda" class="product-img" onerror="this.style.display='none';">
+                        </div>
+                        <div class="product-info">
+                            <h4>Fizzy Lambda</h4>
+                            <p>Refreshing lambda flavor</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- 4. Jeera Soda -->
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image jeera-product">
-                            <img src="images/products/jeera.png" alt="Fizzy Jeera" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/jeeramasala.png" alt="Fizzy Jeera" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Jeera</h4>
@@ -206,10 +227,11 @@
                         </div>
                     </div>
                 </div>
+                <!-- 5. Orange Soda -->
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image orange-product">
-                            <img src="images/products/orange.png" alt="Fizzy Orange" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/orange1.png" alt="Fizzy Orange" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Orange</h4>
@@ -217,10 +239,11 @@
                         </div>
                     </div>
                 </div>
+                <!-- 6. Cola Soda -->
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image cola-product">
-                            <img src="images/products/supercola.png" alt="Fizzy Super Cola" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/cola2.jpg" alt="Fizzy Super Cola" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
                             <h4>Fizzy Super Cola</h4>
@@ -228,7 +251,7 @@
                         </div>
                     </div>
                 </div>
-                
+                <!-- 7. Watermelon Soda -->
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image watermelon-product">
@@ -237,40 +260,6 @@
                         <div class="product-info">
                             <h4>Fizzy Watermelon</h4>
                             <p>Fresh watermelon taste</p>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image mineral-product">
-                            <img src="images/products/mineral-water.png" alt="Fizzy Mineral Water" class="product-img" onerror="this.style.display='none';">
-                        </div>
-                        <div class="product-info">
-                            <h4>Fizzy Mineral Water</h4>
-                            <p>Pure mineral water</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image lambda-product">
-                            <img src="images/products/lime.jpeg" alt="Fizzy Lambda" class="product-img" onerror="this.style.display='none';">
-                        </div>
-                        <div class="product-info">
-                            <h4>Fizzy Lambda</h4>
-                            <p>Refreshing lambda flavor</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image jayaka-product">
-                            <img src="images/products/jayaka.png" alt="Fizzy Jayaka" class="product-img" onerror="this.style.display='none';">
-                        </div>
-                        <div class="product-info">
-                            <h4>Fizzy Jayaka</h4>
-                            <p>Refreshing jayaka flavor</p>
                         </div>
                     </div>
                 </div>
@@ -297,8 +286,7 @@
                     <h5 class="footer-brand">FIZZY BEVERAGES</h5>
                     <p>Premium quality beverages with natural ingredients. Refreshing your moments, one sip at a time.</p>
                     <div class="made-in-india-badge">
-                        <span class="india-flag">🇮🇳</span>
-                        <span>Made in India</span>
+                        <img src="images/hero/makeinindia.png" alt="Make in India" class="make-in-india-logo">
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="bi bi-instagram"></i></a>
