--- a/contact.html
+++ b/contact.html
@@ -223,6 +223,11 @@
     <!-- Footer -->
     <footer class="footer bg-dark text-white py-5">
         <div class="container">
+            <div class="row mb-4">
+                <div class="col-12 text-center">
+                    <p class="fssai-number mb-0">FSSAI: 21525068002030</p>
+                </div>
+            </div>
             <div class="row g-4">
                 <div class="col-lg-4">
                     <h5 class="footer-brand">FIZZY BEVERAGES</h5>
@@ -260,11 +265,8 @@
             </div>
             <hr class="my-4">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-12 text-center">
                     <p class="mb-0">© 2025 Fizzy Beverages. All rights reserved.</p>
-                </div>
-                <div class="col-md-6 text-md-end">
-                    <p class="mb-0">FSSAI: 21525068002030</p>
                 </div>
             </div>
         </div>
