--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-xl-5">
                     <div class="product-box-container">
-                        <img src="images/hero/fizzy-box.png" alt="Amla Zeera Soda Product Box" class="product-box-img">
+                        <img src="images/hero/box-real.jpeg" alt="Amla Zeera Soda Product Box" class="product-box-img">
                     </div>
                 </div>
             </div>
@@ -186,7 +186,7 @@
                             <div class="product-badge">Speciality</div>
                         </div>
                         <div class="product-info">
-                            <h4>Fizzy Amla Zeera</h4>
+                            <h4>Amla Zeera Soda</h4>
                             <p>Indian gooseberry with cumin</p>
                         </div>
                     </div>
@@ -195,10 +195,10 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image jayaka-product">
-                            <img src="images/products/punjabi2.png" alt="Fizzy Jayaka" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/jayaka2.png" alt="Fizzy Jayaka" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
-                            <h4>Fizzy Jayaka</h4>
+                            <h4>Fizzy Punjabi Jayaka</h4>
                             <p>Refreshing jayaka flavor</p>
                         </div>
                     </div>
@@ -210,8 +210,8 @@
                             <img src="images/products/limefizzy.png" alt="Fizzy Lambda" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
-                            <h4>Fizzy Lambda</h4>
-                            <p>Refreshing lambda flavor</p>
+                            <h4>Fizzy Lime</h4>
+                            <p>Refreshing lime flavor</p>
                         </div>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
                             <img src="images/products/jeeramasala.png" alt="Fizzy Jeera" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
-                            <h4>Fizzy Jeera</h4>
+                            <h4>Fizzy Jeera Soda</h4>
                             <p>Spiced cumin soda</p>
                         </div>
                     </div>
@@ -243,10 +243,10 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="product-card">
                         <div class="product-image cola-product">
-                            <img src="images/products/cola2.jpg" alt="Fizzy Super Cola" class="product-img" onerror="this.style.display='none';">
+                            <img src="images/products/cola3.png" alt="Fizzy Super Cola" class="product-img" onerror="this.style.display='none';">
                         </div>
                         <div class="product-info">
-                            <h4>Fizzy Super Cola</h4>
+                            <h4>Fizzy Cola</h4>
                             <p>Classic cola taste</p>
                         </div>
                     </div>
@@ -281,6 +281,11 @@
     <!-- Footer -->
     <footer class="footer bg-dark text-white py-5">
         <div class="container">
+            <div class="row mb-4">
+                <div class="col-12 text-center">
+                    <p class="fssai-number mb-0">FSSAI: 21525068002030</p>
+                </div>
+            </div>
             <div class="row g-4">
                 <div class="col-lg-4">
                     <h5 class="footer-brand">FIZZY BEVERAGES</h5>
@@ -318,11 +323,8 @@
             </div>
             <hr class="my-4">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-12 text-center">
                     <p class="mb-0">© 2025 Fizzy Beverages. All rights reserved.</p>
-                </div>
-                <div class="col-md-6 text-md-end">
-                    <p class="mb-0">FSSAI: 21525068002030</p>
                 </div>
             </div>
         </div>
