Fizzy beverages box and footer change

--- a/contact.html
+++ b/contact.html
@@ -223,18 +223,10 @@
     <!-- Footer -->
     <footer class="footer bg-dark text-white py-5">
         <div class="container">
-            <div class="row mb-4">
-                <div class="col-12 text-center">
-                    <p class="fssai-number mb-0">FSSAI: 21525068002030</p>
-                </div>
-            </div>
             <div class="row g-4">
                 <div class="col-lg-4">
                     <h5 class="footer-brand">FIZZY BEVERAGES</h5>
                     <p>Premium quality beverages with natural ingredients. Refreshing your moments, one sip at a time.</p>
-                    <div class="made-in-india-badge">
-                        <img src="images/hero/makeinindia.png" alt="Make in India" class="make-in-india-logo">
-                    </div>
                     <div class="social-links">
                         <a href="#"><i class="bi bi-instagram"></i></a>
                         <a href="https://wa.me/917786882288" target="_blank"><i class="bi bi-whatsapp"></i></a>
@@ -257,6 +249,7 @@
                         <li><i class="bi bi-telephone-fill"></i> +91 77868 82288</li>
                         <li><i class="bi bi-telephone-fill"></i> +91 85911 82288</li>
                         <li><i class="bi bi-envelope-fill"></i> info@fizzybeverages.in</li>
+                        <li class="fssai-number">FSSAI: 21525068002030</li>
                         <li><i class="bi bi-geo-alt-fill"></i> Shop No. 14/A, Ground Floor, MM Complex,<br>
                             Mumbra Shil Road, Shilphata Shil,<br>
                             Mumbra - Thane, Maharashtra - 400612</li>
@@ -266,7 +259,10 @@
             <hr class="my-4">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">© 2025 Fizzy Beverages. All rights reserved.</p>
+                    <p class="mb-2">© 2025 Fizzy Beverages. All rights reserved.</p>
+                    <div class="made-in-india-badge-footer">
+                        <img src="images/hero/makeinindia.png" alt="Make in India" class="make-in-india-logo-footer">
+                    </div>
                 </div>
             </div>
         </div>
