Fizzy beverages script

--- a/about.html
+++ b/about.html
@@ -208,23 +208,32 @@
                 <div class="col-lg-4">
                     <h5>Contact Info</h5>
                     <ul class="footer-contact">
-                        <li><i class="bi bi-telephone-fill"></i> +91 77868 82288</li>
-                        <li><i class="bi bi-telephone-fill"></i> +91 85911 82288</li>
                         <li><i class="bi bi-envelope-fill"></i> info@fizzybeverages.in</li>
-                        <li class="fssai-number">FSSAI: 21525068002030</li>
                         <li><i class="bi bi-geo-alt-fill"></i> Shop No. 14/A, Ground Floor, MM Complex,<br>
                             Mumbra Shil Road, Shilphata Shil,<br>
                             Mumbra - Thane, Maharashtra - 400612</li>
+                    </ul>
+                    <h5 class="mt-4">For Trade Enquiries</h5>
+                    <ul class="footer-contact">
+                        <li><i class="bi bi-telephone-fill"></i> +91 77868 82288 (Mumbai)</li>
+                        <li><i class="bi bi-telephone-fill"></i> +91 85911 82288 (Maharashtra)</li>
                     </ul>
                 </div>
             </div>
             <hr class="my-4">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-2">© 2025 Fizzy Beverages. All rights reserved.</p>
-                    <div class="made-in-india-badge-footer">
+                    <div class="fssai-section mb-4">
+                        <img src="images/hero/fssai_logo_white.png" alt="FSSAI Logo" class="fssai-logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <div class="fssai-logo-placeholder" style="display:none;">
+                            <div class="fssai-text-logo">FSSAI</div>
+                        </div>
+                        <p class="fssai-license-number">Lic No. 21525068002030</p>
+                    </div>
+                    <div class="made-in-india-badge-footer mb-3">
                         <img src="images/hero/makeinindia.png" alt="Make in India" class="make-in-india-logo-footer">
                     </div>
+                    <p class="mb-2">© 2025 Fizzy Beverages. All rights reserved.</p>
                 </div>
             </div>
         </div>
