--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,7 @@
                             <div class="contact-details">
                                 <h5>Email</h5>
                                 <p><a href="mailto:info@fizzybeverages.in">info@fizzybeverages.in</a></p>
+                                <p><a href="mailto:fizzybeverage9@gmail.com">fizzybeverage9@gmail.com</a></p>
                             </div>
                         </div>
 
@@ -247,6 +248,7 @@
                     <h5>Contact Info</h5>
                     <ul class="footer-contact">
                         <li><i class="bi bi-envelope-fill"></i> info@fizzybeverages.in</li>
+                        <li><i class="bi bi-envelope-fill"></i> fizzybeverage9@gmail.com</li>
                         <li><i class="bi bi-geo-alt-fill"></i> Shop No. 14/A, Ground Floor, MM Complex,<br>
                             Mumbra Shil Road, Shilphata Shil,<br>
                             Mumbra - Thane, Maharashtra - 400612</li>
