--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
                     <h5>Contact Info</h5>
                     <ul class="footer-contact">
                         <li><i class="bi bi-envelope-fill"></i> info@fizzybeverages.in</li>
+                        <li><i class="bi bi-envelope-fill"></i> fizzybeverage9@gmail.com</li>
                         <li><i class="bi bi-geo-alt-fill"></i> Shop No. 14/A, Ground Floor, MM Complex,<br>
                             Mumbra Shil Road, Shilphata Shil,<br>
                             Mumbra - Thane, Maharashtra - 400612</li>
