Fizzy amla Beverage

--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,9 @@
                                 <i class="bi bi-telephone-fill"></i>
                             </div>
                             <div class="contact-details">
-                                <h5>Phone</h5>
-                                <p><a href="tel:+917786882288">+91 77868 82288</a></p>
-                                <p><a href="tel:+918591182288">+91 85911 82288</a></p>
+                                <h5>For Trade Enquiries</h5>
+                                <p><a href="tel:+917786882288">+91 77868 82288 (Mumbai)</a></p>
+                                <p><a href="tel:+918591182288">+91 85911 82288 (Maharashtra)</a></p>
                             </div>
                         </div>
 
