--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-xl-5">
                     <div class="product-box-container">
-                        <img src="images/hero/logo2.png" alt="Amla Zeera Soda Product Box" class="product-box-img">
+                        <img src="images/hero/fizzy-amla-box.png" alt="Amla Zeera Soda Product Box" class="product-box-img">
                     </div>
                 </div>
             </div>
